--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/CSCI5308_3_DEVINT?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url = jdbc:mysql://db-5308.cs.dal.ca:3306/CSCI5308_3_DEVINT
 spring.datasource.username = CSCI5308_3_DEVINT_USER
 spring.datasource.password = uSohtei8is
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+logging.level.com.zaxxer.hikari=DEBUG
