--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^3.4.25",
     "react": "18.2.0",
-    "react-native": "0.71.2"
+    "react-native": "0.71.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
