--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-native": "0.71.2",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
