Adding JWT and Login functionality, Modified signup functionality.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 logging.level.com.zaxxer.hikari=DEBUG
+
+app.jwtSecret=vaidik
+app.jwtExpiration=1600
+
+spring.main.allow-circular-references=true
