--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "axios": "^1.3.3",
+    "axois": "^0.0.1-security",
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-native": "0.71.2",
