--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
-    "@react-navigation/native-stack": "^6.9.9",
+    "@react-navigation/native-stack": "^6.9.10",
     "axios": "^1.3.3",
     "axois": "^0.0.1-security",
     "native-base": "^3.4.25",
@@ -19,7 +19,8 @@
     "react-native": "0.71.2",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.19.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
