--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.19.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
