--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
+  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 default:
   image: maven:3.8.3-openjdk-17
