--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
 default:
   image: maven:3.8.3-openjdk-17
   tags:
-  - deployment
+  - autoscale-runner.cs.dal.ca
   services: 
   - docker:dind
 
