--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
 default:
   image: maven:3.8.3-openjdk-17
   tags:
-  - autoscale-runner.cs.dal.ca
+  - deployment
   services: 
   - docker:dind
 
