--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,11 @@ variables:
   TAG_LATEST: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
   TAG_COMMIT: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
 default:
-  image: docker:latest
+  image: docker:19
   tags: 
   - rr11rr
   services: 
-  - docker:dind
+  - docker:dind --prviliged
 
 stages:
   - build
@@ -42,7 +42,7 @@ deploy:
   stage: deploy
   image: docker:19
   services: 
-    - docker:19-dind
+    - docker:19-dind --prviliged
   before_script:
     - echo $USER
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
