--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,17 +19,17 @@ stages:
   - package
   - deploy
 
-build:
-  stage: build
-  image: maven:3.8.3-openjdk-17
-  script:
-    - mvn -f backend/pom.xml install
+# build:
+#   stage: build
+#   image: maven:3.8.3-openjdk-17
+#   script:
+#     - mvn -f backend/pom.xml install
 
-test:
-  stage: test
-  image: maven:3.8.3-openjdk-17
-  script:
-    - mvn -f backend/pom.xml test
+# test:
+#   stage: test
+#   image: maven:3.8.3-openjdk-17
+#   script:
+#     - mvn -f backend/pom.xml test
 
 package:
   stage: package
