Path to build package changed .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ package:
   stage: package
   script: 
     - echo "Maven Packaging Started"
-    - mvn clean package
+    - mvn -f backend/pom.xml clean package
   artifacts:
     paths:
       - target/*.jar
