Echo for CI_Registry added .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,11 +22,11 @@ stages:
 #  script:
 #    - mvn -f backend/pom.xml install
 
-test:
-  stage: test
-  image: maven:3.8.3-openjdk-17
-  script:
-    - mvn -f backend/pom.xml test
+#test:
+#  stage: test
+#  image: maven:3.8.3-openjdk-17
+ # script:
+#    - mvn -f backend/pom.xml test
 
 package:
   stage: package
@@ -44,6 +44,7 @@ deploy:
   stage: deploy
   image: docker:latest
   before_script:
+    - echo "CI_REGISTRY:" ${CI_REGISTRY}
     - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     - docker build -t ${CONTAINER_TEST_IMAGE}
     - docker push ${CONTAINER_TEST_IMAGE}
