--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ variables:
   MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
   CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:latest
   DOCKER_HOST: tcp://localhost:2375/
+  CI_REGISTRY_IMAGE: latest
 
 default:
   image: maven:3.8.3-openjdk-17
