--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-camera": "^4.2.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.19.0",
     "react-native-svg": "^12.1.1",
