--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ deploy:
   stage: deploy
   image: docker:latest
   before_script:
-    - echo ${SSH_PRIVATE_KEY}
+    - echo "SSH_PRIVATE_KEY:" ${SSH_PRIVATE_KEY}
     - echo "CI_REGISTRY:" $CI_REGISTRY
     - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} $CI_REGISTRY
     - docker build -t ${CONTAINER_TEST_IMAGE}
