Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,15 +41,21 @@ package:
     - PX-22_CD_Implementation
 
 
+# deploy:
+#   stage: deploy
+#   image: docker:latest
+#   before_script:
+#     - echo "SSH_PRIVATE_KEY:" ${SSH_PRIVATE_KEY}
+#     - echo "CI_REGISTRY:" $CI_REGISTRY
+#     - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} $CI_REGISTRY
+#     - docker build -t ${CONTAINER_TEST_IMAGE}
+#     - docker push ${CONTAINER_TEST_IMAGE}
+#     - docker logout
+#   script:
+#     - echo "Maven Deployment Started"
+
 deploy:
   stage: deploy
-  image: docker:latest
-  before_script:
-    - echo "SSH_PRIVATE_KEY:" ${SSH_PRIVATE_KEY}
-    - echo "CI_REGISTRY:" $CI_REGISTRY
-    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} $CI_REGISTRY
-    - docker build -t ${CONTAINER_TEST_IMAGE}
-    - docker push ${CONTAINER_TEST_IMAGE}
-    - docker logout
   script:
-    - echo "Maven Deployment Started"
+    - chmod og-rwx ${DEPLOY_SSH_KEY}
+    - scp -r -o StrictHostKeyChecking=no -i "${DEPLOY_SSH_KEY}" target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:/home/${DEPLOY_USER}/${DEPLOY_DIR}/bpa-0.0.1-SNAPSHOT.jar"
