--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,16 +30,16 @@ stages:
  # script:
 #    - mvn -f backend/pom.xml test
 
-package:
-  stage: package
-  script: 
-    - echo "Maven Packaging Started"
-    - mvn -f backend/pom.xml clean package
-  artifacts:
-    paths:
-      - backend/target/*.jar
-  only:
-    - PX-22_CD_Implementation
+# package:
+#   stage: package
+#   script: 
+#     - echo "Maven Packaging Started"
+#     - mvn -f backend/pom.xml clean package
+#   artifacts:
+#     paths:
+#       - backend/target/*.jar
+#   only:
+#     - PX-22_CD_Implementation
 
 
 # deploy:
@@ -58,6 +58,7 @@ package:
 build_job_docker:
   stage: docker
   script:
+    - echo "${DEPLOY_SSH_KEY}"
     - docker login -u ${CI_REGISTRY_USERNAME} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     - docker build -t $CONTAINER_TEST_IMAGE .
     - docker push $CONTAINER_TEST_IMAGE
