Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ deploy:
   before_script:
     - echo ${DEPLOY_SSH_KEY}
     - echo ${CI_REGISTRY}
-    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} $CI_REGISTRY
+    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     - docker build -t ${CONTAINER_TEST_IMAGE}
     - docker push ${CONTAINER_TEST_IMAGE}
     - docker logout
