--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
   MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
-  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:latest
+  IMAGE_NAME: csci5308vm3/registry
+  IMAGE_TAG: CICD-BPA
   DOCKER_HOST: tcp://localhost:2375/
   CI_REGISTRY_IMAGE: latest
 
@@ -15,7 +16,7 @@ stages:
   - build
   - test
   - package
-  - deploy
+  - build_image
 
 #build:
 #  stage: build
@@ -41,18 +42,19 @@ stages:
 #     - PX-22_CD_Implementation
 
 
-deploy:
-  stage: deploy
-  image: docker:latest
+build_image:
+  stage: build_image
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
   before_script:
-    - echo ${DEPLOY_SSH_KEY}
-    - echo ${CI_REGISTRY}
+    - docker build -t $IMAGE_NAME:$IMAGE_TAG .
     - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
-    - docker build -t ${CONTAINER_TEST_IMAGE}
-    - docker push ${CONTAINER_TEST_IMAGE}
-    - docker logout
+    - docker push $IMAGE_NAME:$IMAGE_TAG
   script:
-    - echo "Maven Deployment Started"
+    - echo "Docker Image Build"
 
   
 
