--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,11 @@ stages:
   - package
   - build_image
 
-#build:
-#  stage: build
-#  image: maven:3.8.3-openjdk-17
-#  script:
-#    - mvn -f backend/pom.xml install
+build:
+  stage: build
+  image: maven:3.8.3-openjdk-17
+  script:
+    - mvn -f backend/pom.xml install
 
 #test:
 #  stage: test
@@ -30,16 +30,16 @@ stages:
  # script:
 #    - mvn -f backend/pom.xml test
 
-# package:
-#   stage: package
-#   script: 
-#     - echo "Maven Packaging Started"
-#     - mvn -f backend/pom.xml clean package
-#   artifacts:
-#     paths:
-#       - backend/target/*.jar
-#   only:
-#     - PX-22_CD_Implementation
+package:
+  stage: package
+  script: 
+     - echo "Maven Packaging Started"
+     - mvn -f backend/pom.xml clean package
+  artifacts:
+    paths:
+      - backend/target/*.jar
+  only:
+    - PX-22_CD_Implementation
 
 
 build_image:
