--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   #IMAGE_NAME: docker.io/sardock01/cicdregistry
   #IMAGE_TAG: CICD-BPA
   #DOCKER_HOST: tcp://localhost:2375/
-  CONTAINER_IMAGE: CI_REGISTRY_IMAGE:latest
+  CONTAINER_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 default:
   image: maven:3.8.3-openjdk-17
