--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,16 +31,16 @@ stages:
  # script:
 #    - mvn -f backend/pom.xml test
 
-package:
-  stage: package
-  script: 
-     - echo "Maven Packaging Started"
-     - mvn -f backend/pom.xml clean package
-  artifacts:
-    paths:
-      - backend/target/*.jar
-  only:
-    - PX-22_CD_Implementation
+# package:
+#   stage: package
+#   script: 
+#      - echo "Maven Packaging Started"
+#      - mvn -f backend/pom.xml clean package
+#   artifacts:
+#     paths:
+#       - backend/target/*.jar
+#   only:
+#     - PX-22_CD_Implementation
 
 
 # build_image:
@@ -64,6 +64,7 @@ deploy:
     - echo "Maven Deploy Started"
     - echo "${DEPLOY_SSH_KEY}"
     - eval $(ssh-agent -s)
+    - ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
   
 
