--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,32 +31,32 @@ stages:
  # script:
 #    - mvn -f backend/pom.xml test
 
-# package:
-#   stage: package
-#   script: 
-#      - echo "Maven Packaging Started"
-#      - mvn -f backend/pom.xml clean package
-#   artifacts:
-#     paths:
-#       - backend/target/*.jar
-#   only:
-#     - PX-22_CD_Implementation
+package:
+  stage: package
+  script: 
+     - echo "Maven Packaging Started"
+     - mvn -f backend/pom.xml clean package
+  artifacts:
+    paths:
+      - backend/target/*.jar
+  only:
+    - PX-22_CD_Implementation
 
 
-# build_image:
-#   stage: build_image
-#   image: docker:20.10.16
-#   services:
-#     - docker:20.10.16-dind
-#   variables:
-#     DOCKER_TLS_CERTDIR: "/certs"
-#   before_script:
-#     - pwd
-#     - docker build -t $CONTAINER_IMAGE .
-#     - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
-#     - docker push $CONTAINER_IMAGE
-#   script:
-#     - echo "Docker Image Build"
+build_image:
+  stage: build_image
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
+  before_script:
+    - pwd
+    - docker build -t $CONTAINER_IMAGE .
+    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
+    - docker push $CONTAINER_IMAGE
+  script:
+    - echo "Docker Image Build"
 
 deploy:
   stage: deploy
