--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,8 @@ deploy:
   script: 
     - echo "Maven Deploy Started"
     - echo "${DEPLOY_SSH_KEY}"
+    - echo "${DEPLOY_SSH_KEY}" | base64 -d > keyfile
+    - ssh-keygen -l -f keyfile
     - eval $(ssh-agent -s)
     - ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
