--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ deploy:
     - echo "Maven Deploy Started"
     - echo "${DEPLOY_SSH_KEY}"
     - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | ssh-add -
+    - ssh-add <(echo "${DEPLOY_SSH_KEY}")
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
   
 
