--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,11 +60,16 @@ stages:
 
 deploy:
   stage: deploy
+  before_script:
+    - echo "$DEPLOY_SSH_KEY" | base64 -d > key
+    - chmod 600 key
+    - eval $(ssh-agent -s)
+    - ssh-add key
   script: 
     - echo "Maven Deploy Started"
-    - echo "${DEPLOY_SSH_KEY}"
-    - eval $(ssh-agent -s)
-    - ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
+    #- echo "${DEPLOY_SSH_KEY}"
+    #- eval $(ssh-agent -s)
+    #- ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
   
 
