Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ deploy:
     - chmod 600 key
     - eval $(ssh-agent -s)
     - ssh-add key
+    - ssh-add -l
   script: 
     - echo "Maven Deploy Started"
     #- echo "${DEPLOY_SSH_KEY}"
