--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,8 +64,7 @@ deploy:
     - echo "$DEPLOY_SSH_KEY" | base64 -d > key
     - chmod 600 key
     - eval $(ssh-agent -s)
-    - ssh-add key
-    - ssh-add -l
+    - ssh-add -k key
   script: 
     - echo "Maven Deploy Started"
     #- echo "${DEPLOY_SSH_KEY}"
