--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ deploy:
     - echo "$DEPLOY_SSH_KEY" | base64 -d > key
     - chmod 600 key
     - eval $(ssh-agent -s)
-    - echo "y" | ssh-keygen -p -P "ssh" -N "" -f /home/csci5308vm3/.ssh/keyname
+    - echo "y" | ssh-keygen -p -P "" -N "" -f /home/csci5308vm3/.ssh/keyname
     - ssh-add -k key
   script: 
     - echo "Maven Deploy Started"
