--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,7 @@ deploy:
   stage: deploy
   before_script:
     - echo "${DEPLOY_SSH_KEY}" | base64 -d > key
+    - echo key
     - chmod 600 key
     - eval $(ssh-agent -s)
     - ssh-add -k key
