--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ deploy:
   before_script:
     - echo "${DEPLOY_SSH_KEY}"
     - eval $(ssh-agent -s)
-    - sudo chmod 600 key
+    - chmod 600 key
     - ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
   script: 
     - echo "Maven Deploy Started"
