--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ deploy:
   before_script:
     - echo "${DEPLOY_SSH_KEY}"
     - eval $(ssh-agent -s)
-    - ssh-add <(echo "${DEPLOY_SSH_KEY}")
+    - ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
   script: 
     - echo "Maven Deploy Started"
     #- echo "${DEPLOY_SSH_KEY}"
