--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,14 @@ variables:
   #DOCKER_HOST: tcp://localhost:2375/
   CONTAINER_IMAGE: $CI_REGISTRY_IMAGE:latest
 
+stages:
+  - build
+  - test
+  - package
+  - build_image
+  - deploy
+
+
 default:
   image: maven:3.8.3-openjdk-17
   tags: 
