--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,17 +19,17 @@ stages:
   - build_image
   - deploy
 
-build:
-  stage: build
-  image: maven:3.8.3-openjdk-17
-  script:
-    - mvn -f backend/pom.xml install
+# build:
+#   stage: build
+#   image: maven:3.8.3-openjdk-17
+#   script:
+#     - mvn -f backend/pom.xml install
 
-test:
- stage: test
- image: maven:3.8.3-openjdk-17
- script:
-   - mvn -f backend/pom.xml test
+#test:
+#  stage: test
+#  image: maven:3.8.3-openjdk-17
+ # script:
+#    - mvn -f backend/pom.xml test
 
 package:
   stage: package
@@ -70,6 +70,3 @@ deploy:
     #- eval $(ssh-agent -s)
     #- ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
-    
-  
-
