--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,10 @@ package:
   artifacts:
     paths:
       - backend/target/*.jar
+  only:
+    - Develop
+
+      
 
 
 build_image:
@@ -55,6 +59,8 @@ build_image:
     - docker push $CONTAINER_IMAGE
   script:
     - echo "Docker Image Build"
+  only:
+    - Develop
 
 deploy:
   stage: deploy
@@ -68,6 +74,8 @@ deploy:
     #- eval $(ssh-agent -s)
     #- ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
+  only:
+    - Develop
     
   
 
