--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,6 +86,11 @@
             <version>17.0.0</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.0.5</version>
+		</dependency>
     </dependencies>
 
 	<build>
