--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/native-stack": "^6.9.10",
     "axios": "^1.3.3",
     "native-base": "^3.4.25",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-camera": "^4.2.1",
+    "react-native-document-picker": "^8.2.0",
+    "react-native-fs": "^2.20.0",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^3.4.1",
