--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vaidiknimavat1@gmail.com
-spring.mail.password=lhebhbaudnobmxgq
+spring.mail.username=browniepointapp@gmail.com
+spring.mail.password=gfljbxiojnlsmvko
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
