Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,5 @@
 variables:
   MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
-  #IMAGE_NAME: docker.io/sardock01/cicdregistry
-  #IMAGE_TAG: CICD-BPA
-  #DOCKER_HOST: tcp://localhost:2375/
   CONTAINER_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 default:
@@ -18,46 +15,45 @@ stages:
   - build
   - test
   - package
-  - build_image
   - deploy
 
-# smells-job:
-#   stage: smells
-#   image: maven:3.8.3-openjdk-17
-#   script:
-#   - echo "Start smells job"
-#   - mkdir smells/
-#   - java -jar backend/.gitlab/DesigniteJava.jar -i backend -o smells/ -d 
-#   - cd smells/
-#   - ls -a
-#   artifacts:
-#     paths:
-#       - smells/
-#       - backend
+smells-job:
+  stage: smells
+  image: maven:3.8.3-openjdk-17
+  script:
+  - echo "Start smells job"
+  - mkdir smells/
+  - java -jar backend/.gitlab/DesigniteJava.jar -i backend -o smells/ -d 
+  - cd smells/
+  - ls -a
+  artifacts:
+    paths:
+      - smells/
+      - backend
 
-# issue-job:
-#   stage: issue
-#   dependencies:
-#     - smells-job
-#   image: "python:3.10"
-#   script:
-#     - ls smells/ -a
-#     - python --version
-#     - pip install -r backend/.gitlab/requirements.txt
-#     - echo "CI_COMMIT_SHA:" $CI_COMMIT_SHA
-#     - python backend/.gitlab/issue.py $CI_COMMIT_SHA
+issue-job:
+  stage: issue
+  dependencies:
+    - smells-job
+  image: "python:3.10"
+  script:
+    - ls smells/ -a
+    - python --version
+    - pip install -r backend/.gitlab/requirements.txt
+    - echo "CI_COMMIT_SHA:" $CI_COMMIT_SHA
+    - python backend/.gitlab/issue.py $CI_COMMIT_SHA
 
-# build:
-#   stage: build
-#   image: maven:3.8.3-openjdk-17
-#   script:
-#     - mvn -f backend/pom.xml install
+build:
+  stage: build
+  image: maven:3.8.3-openjdk-17
+  script:
+    - mvn -f backend/pom.xml install
 
-# test:
-#  stage: test
-#  image: maven:3.8.3-openjdk-17
-#  script:
-#    - mvn -f backend/pom.xml test
+test:
+ stage: test
+ image: maven:3.8.3-openjdk-17
+ script:
+   - mvn -f backend/pom.xml test
 
 package:
   stage: package
@@ -70,34 +66,22 @@ package:
   # only:
   #   - Develop
 
-build_image:
-  stage: build_image
+deploy:
+  stage: deploy
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
   before_script:
-    - pwd
-    - docker build -t $CONTAINER_IMAGE .
-    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
-    - docker push $CONTAINER_IMAGE
-  script:
-    - echo "Docker Image Build"
-  # only:
-  #   - Develop
-
-deploy:
-  stage: deploy
-  before_script:
     - echo "${DEPLOY_SSH_KEY}"
     - eval $(ssh-agent -s)
     - ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
+    - docker build -t $CONTAINER_IMAGE .
+    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
+    - docker push $CONTAINER_IMAGE
   script: 
     - echo "Maven Deploy Started"
-    #- echo "${DEPLOY_SSH_KEY}"
-    #- eval $(ssh-agent -s)
-    #- ssh-add <(echo "${DEPLOY_SSH_KEY}" | base64 -d)
     - scp -r -o StrictHostKeyChecking=no backend/target/*.jar "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIR}/project.jar"
     - ssh -o StrictHostKeyChecking=no ${DEPLOY_USER}@${DEPLOY_HOST} docker pull $CONTAINER_IMAGE
     - ssh -o StrictHostKeyChecking=no ${DEPLOY_USER}@csci5308vm3.research.cs.dal.ca  docker run -d -p 8080:8080 csci5308vm3.research.cs.dal.ca:5000/bpa:latest
