Adding Integration tests.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 logging.level.com.zaxxer.hikari=DEBUG
 
+spring.datasource.hikari.maximum-pool-size=2
+
 app.jwtSecret=vaidik
 app.jwtExpiration=160000
 
