--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/native-stack": "^6.9.10",
     "axios": "^1.3.3",
     "native-base": "^3.4.25",
-    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-camera": "^4.2.1",
@@ -43,6 +42,10 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
