Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,51 +17,51 @@ stages:
   - package
   - deploy
 
-smells-job:
-  stage: smells
-  image: maven:3.8.3-openjdk-17
-  script:
-  - echo "Start smells job"
-  - mkdir smells/
-  - java -jar backend/.gitlab/DesigniteJava.jar -i backend -o smells/ -d 
-  - cd smells/
-  - ls -a
-  artifacts:
-    paths:
-      - smells/
-      - backend
-  only:
-    - Develop
+# smells-job:
+#   stage: smells
+#   image: maven:3.8.3-openjdk-17
+#   script:
+#   - echo "Start smells job"
+#   - mkdir smells/
+#   - java -jar backend/.gitlab/DesigniteJava.jar -i backend -o smells/ -d 
+#   - cd smells/
+#   - ls -a
+#   artifacts:
+#     paths:
+#       - smells/
+#       - backend
+#   only:
+#     - Develop
 
-issue-job:
-  stage: issue
-  dependencies:
-    - smells-job
-  image: "python:3.10"
-  script:
-    - ls smells/ -a
-    - python --version
-    - pip install -r backend/.gitlab/requirements.txt
-    - echo "CI_COMMIT_SHA:" $CI_COMMIT_SHA
-    - python backend/.gitlab/issue.py $CI_COMMIT_SHA
-  only:
-    - Develop
+# issue-job:
+#   stage: issue
+#   dependencies:
+#     - smells-job
+#   image: "python:3.10"
+#   script:
+#     - ls smells/ -a
+#     - python --version
+#     - pip install -r backend/.gitlab/requirements.txt
+#     - echo "CI_COMMIT_SHA:" $CI_COMMIT_SHA
+#     - python backend/.gitlab/issue.py $CI_COMMIT_SHA
+#   only:
+#     - Develop
 
-build:
-  stage: build
-  image: maven:3.8.3-openjdk-17
-  script:
-    - mvn -f backend/pom.xml install
-  only:
-    - Develop
+# build:
+#   stage: build
+#   image: maven:3.8.3-openjdk-17
+#   script:
+#     - mvn -f backend/pom.xml install
+#   only:
+#     - Develop
 
-test:
- stage: test
- image: maven:3.8.3-openjdk-17
- script:
-   - mvn -f backend/pom.xml test
- only:
-    - Develop
+# test:
+#  stage: test
+#  image: maven:3.8.3-openjdk-17
+#  script:
+#    - mvn -f backend/pom.xml test
+#  only:
+#     - Develop
 
 package:
   stage: package
