--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
-
+        androidXCore = "1.6.0"
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
     }
@@ -19,3 +19,11 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
 }
+
+allprojects { 
+    configurations.all { 
+        resolutionStrategy { 
+            force 'androidx.core:core-ktx:1.6.0','com.faccebook.react:react-native:0.71.2'
+            } 
+            }
+             }
